Fix title overflow

--- a/src/app/home/components/releases-list/releases-list.component.scss
+++ b/src/app/home/components/releases-list/releases-list.component.scss
@@ -8,6 +8,7 @@
 .container {
     max-width: $container-width;
     margin: 0 auto;
+    padding-top: 1px;
 }
 
 .title {
